# MinLog

./: Cargo.toml  LICENSE
src/: config.rs  error.rs  main.rs
src/domain/: mod.rs
src/domain/log/: duration.rs  lifetime.rs  log.rs  lvl.rs  mod.rs
src/storage/: local_storage.rs  mod.rs
src/usecase/: logger_builder.rs  mod.rs  traits.rs
src/usecase/common_logger/: logger.rs  mod.rs
src/usecase/just_logger/: logger.rs  mod.rs
src/web/: http_server.rs  log_route.rs  mod.rs
