[package]
name = "min_log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"tokio" = { version = "1.21.2", features = ["full"] }
"axum" = "0.7.4"
"serde" = { version = "1.0.193", features = ["derive"] }
"serde_json" = "1.0.87"
"uuid" = { version = "1.6.1", features = ["v4"] }
"envy" = "0.4.2"
"chrono" = {version = "0.4.31", features = ["serde"] }
